--- a/P0-HelloWorld/index.html
+++ b/P0-HelloWorld/index.html
@@ -25,7 +25,11 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <h1>Yrkehögskola</h1>
+
+  <p>Start your education right now</p>
+
+   <a href=“https://www.yrkeshogskolan.se/”> Choose your course </a>
   <script src="js/app.js"></script>
 
 </body>
