Task with image

--- a/P0-HelloWorld/index.html
+++ b/P0-HelloWorld/index.html
@@ -29,7 +29,9 @@
 
   <p>Start your education right now</p>
 
-   <a href=“https://www.yrkeshogskolan.se/”> Choose your course </a>
+  <a href="https://www.ihm.se/">Choose your course</a>
+
+  <img src="https://cdnx.truecrt.com/cdn/content/_643525366cb3e-nvmoacqs-oymy.png">
   <script src="js/app.js"></script>
 
 </body>
