--- a/P0-HelloWorld/index.html
+++ b/P0-HelloWorld/index.html
@@ -22,16 +22,19 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body style="background-color: beige;">
 
   <!-- Add your site or application content here -->
-  <h1>Yrkehögskola</h1>
+  <h2>IHM Business school</h2>
 
-  <p>Start your education right now</p>
+  <p style="color: mediumvioletred;">Start your education right now.</p>
 
   <a href="https://www.ihm.se/">Choose your course</a>
 
-  <img src="https://cdnx.truecrt.com/cdn/content/_643525366cb3e-nvmoacqs-oymy.png">
+  <a href="https://www.ihm.se/">
+    <img src="https://cdnx.truecrt.com/cdn/content/_643525366cb3e-nvmoacqs-oymy.png" alt="Nice logo" style="width: 200px; height: auto;">
+  </a>
+
   <script src="js/app.js"></script>
 
 </body>
